Fixed many layout bugs. Fixed HTML rendering on
yearquartersubject

--- a/CTCODS/CTCClassSchedule/Content/ClassSchedule.css
+++ b/CTCODS/CTCClassSchedule/Content/ClassSchedule.css
@@ -205,7 +205,7 @@ textarea
 .classInfo p { width: 600px;}
 #classDescriptions {}
 .classInfo .classNumber, .classInfo .classTitle, .classInfo .classCredits{}
-.classInfo .classCredits{}
+.classInfo .classCredits{ color: #444; font-weight: normal}
 
 .classDescription{ padding: 0 20px;}
 
@@ -873,9 +873,13 @@ p.course-details-link
 	border-top: 1px solid #eee;
 	width: 770px;
 	overflow: hidden;
-	padding: 5px 20px;
+	padding: 5px 0;
 	list-style: none;
+	margin-left: 20px;
 }
+.section-listing-edit
+{ margin-left: 0; padding-left: 20px;
+    }
 
 .item-number
 {
@@ -976,7 +980,7 @@ ul.class-description
     text-decoration: none;
     color: #666;
     position: relative;
-    padding-left: 18px;
+    padding-left: 16px;
 
 }
 .course-updated a:hover, .course-updated a:focus
@@ -1044,28 +1048,10 @@ ul.section-details li.section-notes
 .classHeading {
 	font-size: 17px;
 	padding: 0 20px;
-	color: White;
-	background: #8c6123; /* Old browsers */
-    background: -moz-linear-gradient(top,  #8c6123 0%, #794800 100%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#8c6123), color-stop(100%,#794800)); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(top,  #8c6123 0%,#794800 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(top,  #8c6123 0%,#794800 100%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(top,  #8c6123 0%,#794800 100%); /* IE10+ */
-    background: linear-gradient(top,  #8c6123 0%,#794800 100%); /* W3C */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#8c6123', endColorstr='#794800',GradientType=0 ); /* IE6-9 */
 }
-.classHeading a { text-decoration: none; color: #fff;}
+.classHeading a { text-decoration: none; color: #794800; font-weight: bold;}
 .classHeading a:hover,
 .classHeading a:focus { text-decoration: underline;}
-
-
-#classDescriptions .classHeading
-{ background: none;  }
-#classDescriptions .classHeading a
-{
- color: #794800;
- font-weight: bold;
-    }
 
 .course-updated a:hover {
 	cursor:pointer;
@@ -1074,7 +1060,7 @@ ul.section-details li.section-notes
 {
     padding: 0 20px;
 }
-.footnote-prereq  { color: #222}
+.footnote-prereq  { color: #666}
 #courseDescription{}
 #courseDescriptionUpcoming{ color: #666}
 #courseDescriptionUpcoming h3 {
@@ -1590,23 +1576,21 @@ a.edit_button
 
 /* end program edit */
 
-.yellow-dashed
+
+.edit-hover
 {
-	border-color: #fdd425;
-	border-style: dashed;
-	border-width: 2px;
-	padding: 3px;
+	outline: 1px dashed #fdd425;
 }
 
 .message
 {
-	-moz-border-radius: 15px;
-	border-radius: 15px;
-	border: 2px solid #fdd425;
-	padding: 10px;
-	padding-left: 50px;
-	margin-top: 10px;
-	background: #fef5be url(images/alert.gif) 10px 10px no-repeat;
+	-webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+	border: 1px solid #FED22F;
+	padding: 9px 10px 10px 35px;
+	margin: 21px 20px 0;
+	background: #FFF0A5 url(images/alert.gif) 10px 10px no-repeat;
 }
 
 .roundcorners {
